--- a/Memes_VS_Notes_Numpy.ipynb
+++ b/Memes_VS_Notes_Numpy.ipynb
@@ -6,7 +6,7 @@
       "name": "Memes_VS_Notes-Numpy",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNV+WAsxlFAQBizGOJtYDXF",
+      "authorship_tag": "ABX9TyMwux+usfcaGeG8JHJ5wRF0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "np.random.seed(1)\n",
         "import math"
       ],
-      "execution_count": 386,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -54,13 +54,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bee43ed4-24ad-4e24-8735-97dfa6a8c1fb"
+        "outputId": "0396348c-ced7-4f1e-e78a-c8a425412333"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 362,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
         "data_meme = \"/content/gdrive/My Drive/Stage_0/Stage_0/Memes\"\n",
         "data_note = \"/content/gdrive/My Drive/Stage_0/Stage_0/Notes\""
       ],
-      "execution_count": 363,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         "    \n",
         "  return images"
       ],
-      "execution_count": 364,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ec72f176-cebe-40c8-ac6f-0da41584c021"
+        "outputId": "cd306d99-a9c9-44a1-96e8-d9e1aad6bdf4"
       },
       "source": [
         "memes = dataloader(data_meme)\n",
@@ -128,7 +128,7 @@
         "notelabel = np.zeros(notes.shape[0])\n",
         "print(notelabel.shape)\n"
       ],
-      "execution_count": 365,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3a43bcdb-8c2d-4ede-8576-cfe35b614617"
+        "outputId": "49abe954-76f5-493e-b479-4d3b58b63a75"
       },
       "source": [
         "memedata = list(zip(memes,memelabel))\n",
@@ -198,7 +198,7 @@
         "\n",
         "print(Y_test.shape)\n"
       ],
-      "execution_count": 366,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
         "        \n",
         "    return parameters"
       ],
-      "execution_count": 367,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
         "    cache_of_layer = (A_prev, W, b,Z)\n",
         "    return A, cache_of_layer"
       ],
-      "execution_count": 368,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
         "    caches.append(cache)\n",
         "    return AL, caches"
       ],
-      "execution_count": 369,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -312,7 +312,7 @@
         "    return cost\n",
         "    "
       ],
-      "execution_count": 389,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
         "    return dA_prev, dW, db\n",
         "\n"
       ],
-      "execution_count": 371,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -369,7 +369,7 @@
         "        grads[\"dA\" + str(l)], grads[\"dW\" + str(l + 1)], grads[\"db\" + str(l + 1)] = backward_step(grads[\"dA\"+str(l+1)],current_caches, activation=\"relu\")\n",
         "    return grads"
       ],
-      "execution_count": 372,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -393,7 +393,7 @@
         "    \n",
         "    return parameters"
       ],
-      "execution_count": 373,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -413,7 +413,7 @@
         "    \n",
         "    return acc"
       ],
-      "execution_count": 374,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -452,7 +452,7 @@
         "    return parameters,AL\n",
         "    "
       ],
-      "execution_count": 405,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -464,26 +464,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 185
         },
-        "outputId": "ab4e9bb0-a561-49b9-9624-9bdec0ca2132"
+        "outputId": "4a6a7fbc-bcee-482b-ea92-f096e58f86f1"
       },
       "source": [
         " parameters,AL = model(X_train,Y_train,layer_dims=[12288,2500,1])"
       ],
-      "execution_count": 403,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cost after epoch 0: 0.674069\n",
-            "Cost after epoch 1: 0.662602\n",
-            "Cost after epoch 2: 0.651094\n",
-            "Cost after epoch 3: 0.639808\n",
-            "Cost after epoch 4: 0.629769\n",
-            "Cost after epoch 5: 0.621350\n",
-            "Cost after epoch 6: 0.614484\n",
-            "Cost after epoch 7: 0.608927\n",
-            "Cost after epoch 8: 0.604405\n",
-            "Cost after epoch 9: 0.600661\n"
+            "Cost after epoch 0: 0.673823\n",
+            "Cost after epoch 1: 0.662589\n",
+            "Cost after epoch 2: 0.651200\n",
+            "Cost after epoch 3: 0.639972\n",
+            "Cost after epoch 4: 0.629946\n",
+            "Cost after epoch 5: 0.621512\n",
+            "Cost after epoch 6: 0.614623\n",
+            "Cost after epoch 7: 0.609050\n",
+            "Cost after epoch 8: 0.604503\n",
+            "Cost after epoch 9: 0.600737\n"
           ],
           "name": "stdout"
         }
@@ -498,10 +498,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 67
         },
-        "outputId": "d105a93b-fb7e-45e2-9987-02c7cd9aacbb"
+        "outputId": "c2486f01-4365-49d6-ca5f-e8ce6b267de3"
       },
       "source": [
-        "acc = accuracy(AL,Y_train)\n",
+        "accu = accuracy(AL,Y_train)\n",
         "ALt,_ = forward_propagation(X_test,parameters)\n",
         "acct  = accuracy(ALt,Y_test)\n",
         "ALv,_ = forward_propagation(X_val,parameters)\n",
@@ -512,13 +512,13 @@
         "\n",
         "\n"
       ],
-      "execution_count": 404,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "train accuracy = 62.0\n",
-            "test accuracy = 74.0\n",
+            "train accuracy = 62.266666666666666\n",
+            "test accuracy = 72.0\n",
             "val accuracy = 64.0\n"
           ],
           "name": "stdout"
